Mudanças na Organização
Renomeada algumas pastas e arquivos, além de terem sido trocadas algumas imagens do menu lateral

--- a/app/src/app/app.html
+++ b/app/src/app/app.html
@@ -11,9 +11,9 @@
           </ion-col>
           <ion-col padding-top col-8>
             <h2 ion-text class="no-margin bold text-white">
-              João Firmino
+              Nome de Usuário(Goku)
             </h2>
-            <span ion-text color="light">Customer</span>
+            <span ion-text color="light">R$00,00</span>
           </ion-col>
         </ion-row>
 
@@ -21,7 +21,7 @@
           <ion-col no-padding class="column">
             <button ion-button icon-left small full color="light" menuClose disabled>
               <ion-icon name="contact"></ion-icon>
-              Edit Profile
+              Editar Perfil
             </button>
           </ion-col>
           <ion-col no-padding class="column">
