backend: Search page
added connection to server

--- a/app/src/pages/search/search.scss
+++ b/app/src/pages/search/search.scss
@@ -20,6 +20,17 @@ page-search,
 	text-align: center;
 }
 
+.inp{
+	display: inline-block;
+	width: 79%;
+}
+
+.btt{
+	display: inline-block;
+	width:20%;
+	text-align: right;
+}
+
 table{
 	width: 100%;
 }
