--- a/app/src/app/app.html
+++ b/app/src/app/app.html
@@ -11,7 +11,7 @@
           </ion-col>
           <ion-col padding-top col-8>
             <h2 ion-text class="no-margin bold text-white">
-              Nome de Usuário(Goku)
+              {{nickname}}
             </h2>
             <span ion-text color="light">R$00,00</span>
           </ion-col>
