APP: A lot of fixes
Arrumando valores no menu lateral, melhoras no login, na busca e pequenos bugfixes pelo código

--- a/app/src/app/app.html
+++ b/app/src/app/app.html
@@ -11,9 +11,9 @@
           </ion-col>
           <ion-col padding-top col-8>
             <h2 ion-text class="no-margin bold text-white">
-              nickname
+              {{nickname}}
             </h2>
-            <span ion-text color="light">R$00,00</span>
+            <span ion-text color="light">R${{credit}}</span>
           </ion-col>
         </ion-row>
 
