--- a/app/src/pages/search/search.scss
+++ b/app/src/pages/search/search.scss
@@ -1,11 +1,3 @@
-page-search,
-.search {
-	ion-input,
-	ion-input::placeholder {
-		color: #fff;
-	}
-}
-
 .name {
 	text-align: center;
 }
@@ -20,15 +12,16 @@ page-search,
 	text-align: center;
 }
 
-.inp{
-	display: inline-block;
-	width: 79%;
+.inp {
+  width: 79%;
+  color: #000;
+  background-color: #fff;
 }
 
-.btt{
-	display: inline-block;
-	width:20%;
-	text-align: right;
+.btt {
+  width: 20%;
+  height: auto;
+  margin:0;
 }
 
 table{
