--- a/app/src/pages/search/search.scss
+++ b/app/src/pages/search/search.scss
@@ -1,28 +1,30 @@
-.name {
-	text-align: center;
-}
+page-search{
+	.name {
+		text-align: center;
+	}
+	
+	.price {
+		color: blue;
+		text-align: right;
+	}
+	
+	.image{
+		display: inline-block;
+		text-align: center;
+	}
+	
+	.inp {
+		color: #000;
+		background-color: #fff;
+	}
+	
+	.btt {
+		width: 50px;
+		height: auto;
+		margin:0;
+	}
 
-.price {
-	color: blue;
-	text-align: right;
-}
-
-.image{
-	display: inline-block;
-	text-align: center;
-}
-
-.inp {
-  color: #000;
-  background-color: #fff;
-}
-
-.btt {
-  width: 50px;
-  height: auto;
-  margin:0;
-}
-
-table{
-	width: 100%;
+	table{
+		width: 100%;
+	}
 }
