app: Página my-advertising e home agora listam promocões do banco
Adicionado métodos em serverStrings e userData para as páginas home e my-advertising. Feito a listagem de promoções que estão no banco de dados

--- a/app/src/components/adcard/adcard.html
+++ b/app/src/components/adcard/adcard.html
@@ -8,6 +8,7 @@
     <p>{{ item.promotion.registerdate }}</p>
   </ion-item>
   <div class="frame">
+    <h2>{{ item.promotion.name }}</h2>
     <img class="inner" [src]=item.promotion.image_url/>
   </div>
   <ion-card-content>
