--- a/app/src/pages/wishlist/wishlist.scss
+++ b/app/src/pages/wishlist/wishlist.scss
@@ -1,6 +1,7 @@
 page-wishlist {
   .content {
     background-color: #fff;
+
     &::after {
       content: "";
       background: url("../assets/img/fundo.jpg") no-repeat;
@@ -12,16 +13,15 @@ page-wishlist {
       position: absolute;
       z-index: 0;
     }
-  
+
     .scroll-content {
       text-align: center;
       align-items: center;
       justify-content: center;
       //background: rgba(50, 10, 92, .4);
-  
       .login-content {
         width: 86%;
-  
+
         .logo {
           width: 60px;
           height: 60px;
@@ -33,16 +33,25 @@ page-wishlist {
       }
     }
   }
+
   .inp {
-		color: #000;
-		background-color: #fff;
-	}
-	.btt {
-		width: 50px;
-		height: auto;
-		margin:0;
+    color: #000;
+    background-color: #fff;
   }
-  .navbar{
+
+  .btt {
+    width: 50px;
+    height: auto;
+    margin: 0;
+  }
+
+  .bttdel {
+    width: 35px;
+    height: 35px;
+    margin: 0;
+  }
+
+  .navbar {
     border-radius: 5px;
   }
 }
