app:tela promoção

--- a/app/src/Cores/Cores.scss
+++ b/app/src/Cores/Cores.scss
@@ -6,7 +6,9 @@
 // ------------------------------------------------ -
 // Para personalizar a aparência deste aplicativo, você pode substituir
 // as variáveis Sass encontradas nos arquivos scss de origem do Ionic.
-
+$modal-inset-width: 100%;
+$modal-inset-height-large: 100%;
+$modal-inset-height-small: 100%;
 $text-color: #4c6df9;
 $background-color: #fff;
 
