--- a/app/src/components/adcard/adcard.html
+++ b/app/src/components/adcard/adcard.html
@@ -1,5 +1,5 @@
 <!-- Generated template for the AdcardComponent component -->
-<ion-card  *ngFor="let item of list">
+<ion-card  *ngFor="let item of list" tappable (click)=openPage(item)>
   <ion-item>
     <ion-avatar item-start>
       <img [src]="item.user.image_url">
