--- a/app/src/pages/advertising/advertising.scss
+++ b/app/src/pages/advertising/advertising.scss
@@ -1,3 +1,92 @@
 page-advertising {
+  .content {
+    background-color: #fff;
+    &::after {
+      content: "";
+      background: url("../assets/img/fundo.jpg") no-repeat;
+      background-size: cover;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      position: absolute;
+      z-index: 0;
+    }
 
+    .scroll-content {
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+      //background: rgba(50, 10, 92, .4);
+      .login-content {
+        width: 86%;
+
+        .logo {
+          width: 60px;
+          height: 60px;
+          margin: 20px auto 0;
+          border-radius: 10%;
+          background: url("../assets/img/logo_proMotion.png") no-repeat;
+          background-size: 100%;
+        }
+      }
+    }
+  }
+  .container{
+    display: inline-block;
+    width: 200px;
+    height: 200px;
+    background-color: #4c6df9;
+    border: 3px inset #4c6df9;
+    position: relative;
+  }
+  .inner{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+  }
+  .price-container{
+    display: inline-block;
+    height: 40px;
+    position: relative;
+  }
+  .text-container{
+    margin-bottom: 150px;
+    display: inline-block;
+    height: 40px;
+    position: relative;
+  }
+  .text{
+    font-size: 23px;
+    top: 0;
+    bottom: 0;
+    left: 15px;
+    right: 0;
+    display: inline-block;
+    position: absolute;
+  }
+  .price{
+    font-size: 23px;
+    top: 0;
+    bottom: 0;
+    left: 15px;
+    right: 0;
+    display: inline-block;
+    position: absolute;
+  }
+  .btt{
+    height: 50px;
+    width: 15%;
+    border-radius: 8px;
+    background-color: #4c6df9;
+    color: white;
+    float: right;
+    vertical-align: bottom;
+    margin-top: 150px;
+  }
 }
