--- a/app/src/components/adcard/adcard.scss
+++ b/app/src/components/adcard/adcard.scss
@@ -1,3 +1,16 @@
 adcard {
-
+  .frame{
+    display: block;
+    margin-left: 5%;
+    width: 120px;
+    height:120px;
+  }
+  .inner {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+    height: 80%;
+    /*whatever width you want*/
+  }
 }
