app: adicionado wishcard component

--- a/app/src/components/list/list.html
+++ b/app/src/components/list/list.html
@@ -1,2 +1,3 @@
-<!-- Generated template for the ListingComponent component -->
 <adcard *ngIf="adcard" [type]="type" [endpoint]="endpoint"></adcard>
+
+<wishcard *ngIf="wishlist"></wishcard>
