app: adicionado ordercard component

--- a/app/src/components/list/list.html
+++ b/app/src/components/list/list.html
@@ -2,6 +2,8 @@
 
 <wishcard *ngIf="wishlist"></wishcard>
 
+<ordercard *ngIf="order"></ordercard>
+
 <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
   <ion-infinite-scroll-content></ion-infinite-scroll-content>
 </ion-infinite-scroll>
