--- a/app/src/components/adcard/adcard.html
+++ b/app/src/components/adcard/adcard.html
@@ -1,14 +1,17 @@
-<ion-card  *ngFor="let item of list" tappable (click)=openPage(item)>
+<ion-card  *ngFor="let item of list">
   <ion-item>
     <ion-avatar item-start>
       <img [src]="item.user.image_url">
     </ion-avatar>
+    <button *ngIf="isUserListing" class="disable" ion-button icon-only (click)=disable(item.promotion.id)>
+        <ion-icon name="remove-circle"></ion-icon>
+    </button>
     <h2>{{ item.user.nickname }}</h2>
     <p>{{ item.promotion.registerdate }}</p>
   </ion-item>
   <div class="frame">
     <h2>{{ item.promotion.name }}</h2>
-    <img class="inner" [src]=item.promotion.image_url/>
+    <img class="inner" [src]=item.promotion.image_url tappable (click)=openPage(item)/>
   </div>
   <ion-card-content>
     <p>{{ item.promotion.description }}</p>
