--- a/app/src/components/ordercard/ordercard.html
+++ b/app/src/components/ordercard/ordercard.html
@@ -2,7 +2,7 @@
     <ion-item>
       <!--Todo: Adicionar cashback-->
       Promotion: {{item.promotion.name}} 
-      Cashback: 5%  
+      Cashback: {{item.promotion.cashback_percentage}}
       <button *ngIf="item.hide.has_item" class="btt" (click)=hide(item)>
         <ion-icon [name]="item.hide.icon"></ion-icon>
       </button>
