app: componente de imagem

--- a/app/src/components/imgupload/imgupload.html
+++ b/app/src/components/imgupload/imgupload.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-
-<html>
-
-<body>
-    <input type='file' accept='image/*' id='file-input' onchange="upload(this.files[0])">
-    <script type="text/javascript" src="imgupload.js"></script>
-</body>
-
-</html>
+<button ion-button (click)="getImage()">Select Image</button>
