Cashback na pagina da promo
cashback sendo mostrado na pagina de cada promoção

--- a/app/src/pages/advertising/advertising.scss
+++ b/app/src/pages/advertising/advertising.scss
@@ -61,6 +61,13 @@ page-advertising {
     height: 40px;
     position: relative;
   }
+  .text-cash{
+    margin-bottom: 150px;
+    margin-left: 800px;
+    display: inline-block;
+    height: 40px;
+    position: relative;
+  }
   .text{
     font-size: 23px;
     top: 0;
