--- a/app/src/app/app.html
+++ b/app/src/app/app.html
@@ -6,7 +6,7 @@
         <ion-row>
           <ion-col col-4>
               <div class="user-avatar">
-                <img src="../assets/img/avatar.jpeg">
+                <img [src]="userurl">
               </div>
           </ion-col>
           <ion-col padding-top col-8>
