--- a/app/src/pages/seller/seller.scss
+++ b/app/src/pages/seller/seller.scss
@@ -37,6 +37,9 @@ page-seller {
     background-color: green;
   }
   .disapprove{
+    background-color: yellow;
+  }
+  .delete{
     background-color: red;
   }
 }
