--- a/app/src/components/historycard/historycard.html
+++ b/app/src/components/historycard/historycard.html
@@ -1,6 +1,10 @@
 <ion-card *ngFor="let item of list">
   <ion-item>
-    <ion-row> Promotion: {{item.promotion.name}} </ion-row> 
+    <ion-row> 
+      Promotion: {{item.promotion.name}} - 
+      <span style="color: green;" *ngIf=item.comment> Votado </span>
+      <span style="color: red;" *ngIf=!item.comment> Não Votado </span>
+    </ion-row> 
     <ion-row> Cashback: {{item.promotion.cashback_percentage}} </ion-row>
     <ion-row> Aprovado por: {{item.approved.nickname}} </ion-row>  
     <ion-row> Data: {{item.order.register_date}} </ion-row>
