--- a/app/src/components/adcard/adcard.scss
+++ b/app/src/components/adcard/adcard.scss
@@ -1,5 +1,5 @@
 adcard {
-  .frame{
+  /*.frame{
     display: block;
     margin-left: 5%;
     width: 120px;
@@ -11,13 +11,106 @@ adcard {
     margin-right: auto;
     margin-top: 10%;
     height: 80%;
-    /*whatever width you want*/
+    
   }
   .item-md .item-button {
     padding: 0 0.6em;
     height: 30px;
     font-size: 1.2rem;
     width: 30px;
+  }
+  .disable{
+    border-radius: 8px;
+    float: right;
+    vertical-align: bottom;
+  }
+}*/
+.content {
+  background-color: #fff;
+  &::after {
+    content: "";
+    background: url("../assets/img/fundo.jpg") no-repeat;
+    background-size: cover;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: 0;
+  }
+
+  .scroll-content {
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    //background: rgba(50, 10, 92, .4);
+    .login-content {
+      width: 86%;
+
+      .logo {
+        width: 60px;
+        height: 60px;
+        margin: 20px auto 0;
+        border-radius: 10%;
+        background: url("../assets/img/logo_proMotion.png") no-repeat;
+        background-size: 100%;
+      }
+    }
+  }
+}
+.container{
+  display: inline-block;
+  width: 200px;
+  height: 200px;
+  background-color: #4c6df9;
+  border: 3px inset #4c6df9;
+  position: relative;
+}
+.inner{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+.price-container{
+  display: inline-block;
+  height: 40px;
+  position: relative;
+}
+.text-container{
+  margin-bottom: 150px;
+  display: inline-block;
+  height: 40px;
+  position: relative;
+}
+.text-cash{
+  margin-bottom: 150px;
+  margin-left: 600px;
+  display: inline-block;
+  height: 40px;
+  position: relative;
+}
+.text{
+  font-size: 23px;
+  top: 0;
+  bottom: 0;
+  left: 15px;
+  right: 0;
+  display: inline-block;
+  position: absolute;
+}
+  .price{
+    font-size: 23px;
+    top: 0;
+    bottom: 0;
+    left: 15px;
+    right: 0;
+    display: inline-block;
+    position: absolute;
   }
   .disable{
     border-radius: 8px;
